--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,21 @@ p {
   overflow: hidden;
 }
 
+.cupper {
+  font-size: 30px;
+  font-weight: 300;
+  text-decoration: line-through;
+}
+
+.upper {
+  background-color: #0055FF;
+  border-bottom-left-radius: 20px;
+  border-top-right-radius: 20px;
+  font-size: 40px;
+  font-weight: 800;
+  padding: 5px 20px;
+}
+
 .superButton::before {
   content: "";
   position: absolute;
